2021-09-16  Guillermo E. Martinez  <guillermo.e.martinez@oracle.com>

	* doc/poke.texi (Poking a SBM Image): Fix typo.

2021-09-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_map): Use `PUSHIOS` instruction to
	get the current IOS, instead of using `PVM_NULL`.
	And also remove the old (incorrect) comment.

2021-09-10  Guillermo E. Martinez  <guillermo.e.martinez@oracle.com>

	* doc/poke.texi (Weird Integers): Fix typo.

2021-09-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poke/pk-mi-json.c (MI Messages): Use "kind" instead of "type" for
	messages.
	(pk_mi_msg_to_json_object): Likewise.
	(pk_mi_json_object_to_msg): Likewise.

2021-08-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/libpoke.h: Fix the comment of `pk_call`.

2021-08-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_ps_type_integral): Fix argument of
	MKTYI instruction to be signed integer.
	* libpoke/pvm-val.c (pvm_make_exception): Fix args of
	`pvm_make_integral_type` invocation.
	* libpoke/pvm.jitter (time): Likewise.

2021-08-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Add missing doc for pk_compile_expression.

2021-07-12  Fangrui Song  <i@maskray.me>

	* doc/poke.texi: Fix a couple of code errors in examples.

2021-07-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_cast): Make cast error
	messages more helpful.

2021-07-04  Guillermo E. Martinez  <guillermo.e.martinez@oracle.com>

	* doc/poke.texi (Decode-Compute-Encode): Fix `double_number`
	function: s/int/unsigned char/ for bytes.

2021-06-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_function): Add comment.
	(pkl_gen_pr_type_array): Save computed closure for printer in
	AST node.
	(pkl_gen_pr_type_struct): Likewise.
	* libpoke/pkl-gen.pks (print_boffset): Use escape sequence in string
	literal to make RAS happy.
	(struct_printer): s/struct_type/@struct_type/.
