@@ -1,3 +1,9 @@
+2021-09-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pk-val.c: Include `assert.h`.
+	(pk_val_offset): Use `PVM_VAL_MAPPED_P` instead
+	of checking `PVM_VAL_OFFSET` against `PVM_NULL`.
+
 2021-09-16  Guillermo E. Martinez  <guillermo.e.martinez@oracle.com>
 
 	* doc/poke.texi (Poking a SBM Image): Fix typo.
